--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <groupId>com.booleans</groupId>
     <artifactId>calendar</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
+    <!--WAR file declaration-->
+    <packaging>war</packaging>
+
     <name>calendar</name>
     <description>Demo project for Spring Boot</description>
     <properties>
